add loadParams as a convenient way to pass extra parameters

--- a/net/Sample/Views/Home/Index.cshtml
+++ b/net/Sample/Views/Home/Index.cshtml
@@ -79,7 +79,8 @@
                         $("<div>")
                             .dxDataGrid({
                                 dataSource: DevExpress.data.AspNet.createStore({
-                                    loadUrl: "@Url.Action("OrderDetails", "Northwind")" + "?" + $.param({ orderID: options.data.OrderID })
+                                    loadUrl: "@Url.Action("OrderDetails", "Northwind")",
+                                    loadParams: { orderID: options.data.OrderID }
                                 })
                             })
                             .appendTo(container);
