--- a/net/Sample/Views/Home/Index.cshtml
+++ b/net/Sample/Views/Home/Index.cshtml
@@ -1,93 +1,79 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
+﻿@{
+    Layout = "~/Views/_Layout.cshtml";
+}
+<div id="grid"></div>
+<script>
+    $(function() {
+        $("#grid").dxDataGrid({
 
-    <link rel="stylesheet" href="~/lib/devextreme/css/dx.common.css" />
-    <link rel="stylesheet" href="~/lib/devextreme/css/dx.light.css" />
+            dataSource: DevExpress.data.AspNet.createStore({
+                key: "OrderID",
+                loadUrl: "@Url.Action("Orders", "Northwind")",
+                updateUrl: "@Url.Action("UpdateOrder", "Northwind")",
+                insertUrl: "@Url.Action("InsertOrder", "Northwind")",
+                deleteUrl: "@Url.Action("DeleteOrder", "Northwind")",
 
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/globalize/lib/globalize.js"></script>
-    <script src="~/lib/devextreme/js/dx.all.debug.js"></script>
+                onBeforeSend: function(operation, ajaxSettings) {
+                    // operation - any of "load", "update", "insert", "delete"
+                    // ajaxSettings - http://api.jquery.com/jquery.ajax/
+                }
+            }),
 
-    <script src="~/lib/dx.aspnet.data.js"></script>
-</head>
-<body>
-    <div id="grid"></div>
-    <script>
-        $(function() {
-            $("#grid").dxDataGrid({
-
-                dataSource: DevExpress.data.AspNet.createStore({
-                    key: "OrderID",
-                    loadUrl: "@Url.Action("Orders", "Northwind")",
-                    updateUrl: "@Url.Action("UpdateOrder", "Northwind")",
-                    insertUrl: "@Url.Action("InsertOrder", "Northwind")",
-                    deleteUrl: "@Url.Action("DeleteOrder", "Northwind")",
-
-                    onBeforeSend: function(operation, ajaxSettings) {
-                        // operation - any of "load", "update", "insert", "delete"
-                        // ajaxSettings - http://api.jquery.com/jquery.ajax/
+            columns: [
+                {
+                    dataField: "CustomerID",
+                    caption: "Customer",
+                    lookup: {
+                        valueExpr: "Value",
+                        displayExpr: "Text",
+                        dataSource: DevExpress.data.AspNet.createStore({
+                            key: "Value",
+                            loadUrl: "@Url.Action("CustomersLookup", "Northwind")"
+                        })
                     }
-                }),
-
-                columns: [
-                    {
-                        dataField: "CustomerID",
-                        caption: "Customer",
-                        lookup: {
-                            valueExpr: "Value",
-                            displayExpr: "Text",
-                            dataSource: DevExpress.data.AspNet.createStore({
-                                key: "Value",
-                                loadUrl: "@Url.Action("CustomersLookup", "Northwind")"
-                            })
-                        }
-                    },
-                    {
-                        dataField: "OrderDate",
-                        dataType: "date"
-                    },
-                    "Freight",
-                    "ShipCountry",
-                    "ShipRegion",
-                    {
-                        dataField: "ShipVia",
-                        lookup: {
-                            valueExpr: "Value",
-                            displayExpr: "Text",
-                            dataSource: DevExpress.data.AspNet.createStore({
-                                key: "Value",
-                                loadUrl: "@Url.Action("ShippersLookup", "Northwind")"
-                            })
-                        }
-                    }
-                ],
-
-                groupPanel: { visible: true },
-                filterRow: { visible: true },
-                headerFilter: { visible: true },
-                editing: {
-                    editEnabled: true,
-                    insertEnabled: true,
-                    removeEnabled: true
                 },
-
-                masterDetail: {
-                    enabled: true,
-                    template: function(container, options) {
-                        $("<div>")
-                            .dxDataGrid({
-                                dataSource: DevExpress.data.AspNet.createStore({
-                                    loadUrl: "@Url.Action("OrderDetails", "Northwind")",
-                                    loadParams: { orderID: options.data.OrderID }
-                                })
-                            })
-                            .appendTo(container);
+                {
+                    dataField: "OrderDate",
+                    dataType: "date"
+                },
+                "Freight",
+                "ShipCountry",
+                "ShipRegion",
+                {
+                    dataField: "ShipVia",
+                    lookup: {
+                        valueExpr: "Value",
+                        displayExpr: "Text",
+                        dataSource: DevExpress.data.AspNet.createStore({
+                            key: "Value",
+                            loadUrl: "@Url.Action("ShippersLookup", "Northwind")"
+                        })
                     }
                 }
-            });
+            ],
+
+            groupPanel: { visible: true },
+            filterRow: { visible: true },
+            headerFilter: { visible: true },
+            editing: {
+                editEnabled: true,
+                insertEnabled: true,
+                removeEnabled: true
+            },
+
+            masterDetail: {
+                enabled: true,
+                template: function(container, options) {
+                    $("<div>")
+                        .dxDataGrid({
+                            dataSource: DevExpress.data.AspNet.createStore({
+                                loadUrl: "@Url.Action("OrderDetails", "Northwind")",
+                                loadParams: { orderID: options.data.OrderID }
+                            })
+                        })
+                        .appendTo(container);
+                }
+            }
         });
-    </script>
-</body>
-</html>
+    });
+</script>
