update to fresh DevExtreme, to reproduce the issue

--- a/net/Sample/Views/Home/Index.cshtml
+++ b/net/Sample/Views/Home/Index.cshtml
@@ -56,9 +56,9 @@
             filterRow: { visible: true },
             headerFilter: { visible: true },
             editing: {
-                editEnabled: true,
-                insertEnabled: true,
-                removeEnabled: true
+                allowUpdating: true,
+                allowAdding: true,
+                allowDeleting: true
             },
 
             masterDetail: {
