--- a/net/Sample/Views/Home/SearchApi.cshtml
+++ b/net/Sample/Views/Home/SearchApi.cshtml
@@ -9,8 +9,8 @@
             dataSource: DevExpress.data.AspNet.createStore({
                 loadUrl: "@Url.Action("Products", "Northwind")"
             }),
-            valueExpr: "ProductID",
-            displayExpr: "ProductName",
+            valueExpr: "productID",
+            displayExpr: "productName",
             searchEnabled: true
         });
     });
