Fix naming conventions after prev commit

--- a/net/Sample/Views/Home/SearchApi.cshtml
+++ b/net/Sample/Views/Home/SearchApi.cshtml
@@ -9,7 +9,7 @@
             dataSource: DevExpress.data.AspNet.createStore({
                 loadUrl: "@Url.Action("Products", "Northwind")"
             }),
-            valueExpr: "productID",
+            valueExpr: "productId",
             displayExpr: "productName",
             searchEnabled: true
         });
