Alternative to JsonIgnore

--- a/net/Sample/Views/Home/GroupedList.cshtml
+++ b/net/Sample/Views/Home/GroupedList.cshtml
@@ -10,7 +10,7 @@
                 store: DevExpress.data.AspNet.createStore({
                     loadUrl: "@Url.Action("Products", "Northwind")"
                 }),
-                group: "category.categoryName",
+                group: "categoryName",
                 sort: "productName",
                 paginate: true,
                 pageSize: 1 // group
