--- a/net/DevExtreme.AspNet.Data/Types/AnonType.Generated.tt
+++ b/net/DevExtreme.AspNet.Data/Types/AnonType.Generated.tt
@@ -25,7 +25,7 @@ namespace DevExtreme.AspNet.Data.Types {
 <# } #>
         }
 
-        public override int Size {
+        protected override int Size {
             get { return <#= size #>; }
         }
 
@@ -34,7 +34,7 @@ namespace DevExtreme.AspNet.Data.Types {
 <# for(var i = 0; i < size; i++)  { #>
                 if(index == <#= i #>) return I<#= i #>;
 <# } #>
-                throw new ArgumentOutOfRangeException();
+                throw new IndexOutOfRangeException();
             }
         }
 
