--- a/net/Sample/Views/Home/Index.cshtml
+++ b/net/Sample/Views/Home/Index.cshtml
@@ -91,7 +91,8 @@
                                 loadUrl: "@Url.Action("OrderDetails", "Northwind")",
                                 loadParams: { orderId: options.data.orderId }
                             }),
-                            remoteOperations: true
+                            remoteOperations: true,
+                            showBorders: true
                         })
                         .appendTo(container);
                 }
