Configure npm + libman

--- a/net/Sample/Views/_Layout.cshtml
+++ b/net/Sample/Views/_Layout.cshtml
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="~/lib/devextreme/css/dx.common.css" />
     <link rel="stylesheet" href="~/lib/devextreme/css/dx.light.css" />
 
-    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/jquery.js"></script>
     <script src="~/lib/devextreme/js/dx.all.debug.js"></script>
 
     <script src="~/lib/dx.aspnet.data.js"></script>
