Sample: add filter panel, allow search in header filter

--- a/net/Sample/Views/Home/Index.cshtml
+++ b/net/Sample/Views/Home/Index.cshtml
@@ -77,7 +77,11 @@
             groupPanel: { visible: true },
             searchPanel: { visible: true },
             filterRow: { visible: true },
-            headerFilter: { visible: true },
+            filterPanel: { visible: true },
+            headerFilter: {
+                allowSearch: true,
+                visible: true
+            },
             editing: {
                 allowUpdating: true,
                 allowAdding: true,
