Support DateOnly / TimeOnly (#613)

--- a/net/Sample/Views/Home/Index.cshtml
+++ b/net/Sample/Views/Home/Index.cshtml
@@ -40,6 +40,20 @@
                     }
                 },
                 {
+                    dataField: "orderDateOnly",
+                    dataType: "date",
+                    headerFilter: {
+                        groupInterval: "quarter"
+                    }
+                },
+                {
+                    dataField: "orderTimeOnly",
+                    dataType: "time",
+                    headerFilter: {
+                        //groupInterval: "quarter" // N|A
+                    }
+                },
+                {
                     dataField: "freight",
                     headerFilter: {
                         groupInterval: 100
@@ -61,8 +75,13 @@
             ],
 
             groupPanel: { visible: true },
+            searchPanel: { visible: true },
             filterRow: { visible: true },
-            headerFilter: { visible: true },
+            filterPanel: { visible: true },
+            headerFilter: {
+                allowSearch: true,
+                visible: true
+            },
             editing: {
                 allowUpdating: true,
                 allowAdding: true,
@@ -74,7 +93,10 @@
             },
             summary: {
                 totalItems: [
-                    { column: "freight", summaryType: "sum" }
+                    { column: "freight", summaryType: "sum" },
+                    { column: "orderDate", summaryType: "count" },
+                    { column: "orderDateOnly", summaryType: "count" },
+                    //{ column: "orderTimeOnly", summaryType: "count" }
                 ],
                 groupItems: [
                     { column: "freight", summaryType: "sum" },
